bayu-springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bayu-springboot-dep1
spec:
  selector:
    matchLabels:
      app: bayu-springboot
  replicas: 3
  template:
    metadata:
      labels:
        app: bayu-springboot
    spec:
      containers:
        - name: bayu-springboot
          image: bayukrsn/bayu-springboot:v3
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 3
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 3
            failureThreshold: 3
      imagePullSecrets:
        - name: bayu-springboot-secret
